src/objects/Publication_Commission_Rates__c.object
<CustomObject>
    <fields>
        <fullName>Commission_Rate_Fri__c</fullName>
        <label>Commission Rate Fri</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Rate_Mon__c</fullName>
        <label>Commission Rate Mon</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Rate_PHD__c</fullName>
        <label>Commission Rate PHD</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Rate_PHE__c</fullName>
        <label>Commission Rate PHE</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Rate_Sat__c</fullName>
        <label>Commission Rate Sat</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Rate_Special_Fri__c</fullName>
        <label>Commission Rate (Special) Fri</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Rate_Special_Mon__c</fullName>
        <label>Commission Rate (Special) Mon</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Rate_Special_PHD__c</fullName>
        <label>Commission Rate (Special) PHD</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Rate_Special_PHE__c</fullName>
        <label>Commission Rate (Special) PHE</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Rate_Special_Sat__c</fullName>
        <label>Commission Rate (Special) Sat</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Rate_Special_Sun__c</fullName>
        <label>Commission Rate  (Special)  Sun</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Rate_Special_Thur__c</fullName>
        <label>Commission Rate (Special) Thur</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Rate_Special_Tue__c</fullName>
        <label>Commission Rate (Special) Tue</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Rate_Special_Wed__c</fullName>
        <label>Commission Rate (Special) Wed</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Rate_Sun__c</fullName>
        <label>Commission Rate Sun</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Rate_Thur__c</fullName>
        <label>Commission Rate Thur</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Rate_Tue__c</fullName>
        <label>Commission Rate Tue</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Rate_Wed__c</fullName>
        <label>Commission Rate Wed</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cover_Price_Fri__c</fullName>
        <label>Cover Price Fri</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cover_Price_Mon__c</fullName>
        <label>Cover Price Mon</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cover_Price_PHD__c</fullName>
        <label>Cover Price PHD</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cover_Price_PHE__c</fullName>
        <label>Cover Price PHE</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cover_Price_Sat__c</fullName>
        <label>Cover Price Sat</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cover_Price_Sun__c</fullName>
        <label>Cover Price Sun</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cover_Price_Thur__c</fullName>
        <label>Cover Price Thur</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cover_Price_Tue__c</fullName>
        <label>Cover Price Tue</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cover_Price_Wed__c</fullName>
        <label>Cover Price Wed</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deliver_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deliver Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_Start_Date__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insertion_Rate__c</fullName>
        <label>Insertion Rate</label>
        <precision>12</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Look-up to Publication</description>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>Publication Commission Rates</relationshipLabel>
        <relationshipName>Publication_Commission_Rates</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Publication Commission Rate</label>
    <nameField>
        <label>Publication Commission Rates Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Publication Commission Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>